Compiler/tests/typing2/bad/testfile-ownership-1.rs
fn main() {
    let v = vec![1, 2, 3];
    let v2 = v;
    let x = v[0];
}
